# animals

./: .env  Cargo.toml  Dockerfile  README.md  animals-api.postman_collection.json  diesel.toml  docker-compose.yml  rust.http
migrations/0001_create_animals/: up.sql
migrations/2023-06-11-125945_create_animals/: down.sql
src/: app_config.rs  app_state.rs  db_util.rs  dto.rs  handler.rs  main.rs  mapper.rs  model.rs  repository.rs  service.rs  state.rs
src/config/: app_settings.rs  app_state.rs  mod.rs
src/dto/: animal_request_dto.rs  animal_response_dto.rs  mod.rs
src/handler/: animal_handler.rs  mod.rs
src/mapper/: animal_mapper.rs  mod.rs
src/model/: animal.rs  mod.rs
src/repository/: animal_repository.rs  db_animal_repository.rs  in_memory_animal_repository.rs  mod.rs
src/schemas/: schema.rs
src/service/: animal_service.rs  mod.rs
