[package]
name = "animals-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.15.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres","r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
r2d2 = "0.8.10"
envconfig = "0.10.0"
